# langchain-course-repo

./: README.md  core.py  ingest.py  ingestion.py  main.py  main_lecl.py  main_localstore.py  mediumblog.txt  pyproject.toml
faiss-index-react/: index.faiss  index.pkl
