[project]
name = "langchain-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.33",
    "langchain-tavily>=0.2.11",
    "python-dotenv>=1.1.1",
]
